<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:visibility="visible"
        app:backgroundTint="#555555"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="BottomAppBar" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="296dp"
        android:layout_height="35dp"
        android:text="@string/calculator_calorii"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="86dp"
        android:layout_height="29dp"
        android:text="@string/varsta"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextVarsta"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <EditText
        android:id="@+id/editTextVarsta"
        android:layout_width="214dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="Varsta"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />

    <TextView
        android:id="@+id/textViewHeight"
        android:layout_width="86dp"
        android:layout_height="29dp"
        android:text="Inaltime: "
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextInaltime"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321" />

    <EditText
        android:id="@+id/editTextInaltime"
        android:layout_width="224dp"
        android:layout_height="62dp"
        android:ems="10"
        android:hint="Inaltime"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321" />

    <TextView
        android:id="@+id/textViewGreutate"
        android:layout_width="86dp"
        android:layout_height="29dp"
        android:text="Greutate: "
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextVarsta"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435" />

    <EditText
        android:id="@+id/editTextGreutate"
        android:layout_width="222dp"
        android:layout_height="66dp"
        android:ems="10"
        android:hint="@string/greutate"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="180dp"
        android:layout_height="51dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223">

        <RadioButton
            android:id="@+id/rbFemeie"
            android:layout_width="92dp"
            android:layout_height="48dp"
            android:text="@string/femeie" />

        <RadioButton
            android:id="@+id/rbBarbat"
            android:layout_width="85dp"
            android:layout_height="48dp"
            android:text="@string/barbat" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewSex"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:text="@string/sex"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <RadioGroup
        android:id="@+id/radioGroupActivity"
        android:layout_width="281dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.648">

        <RadioButton
            android:id="@+id/rbSedentar"
            android:layout_width="92dp"
            android:layout_height="48dp"
            android:text="@string/sedentar" />

        <RadioButton
            android:id="@+id/rbModerat"
            android:layout_width="85dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10sp"
            android:text="@string/moderat" />

        <RadioButton
            android:id="@+id/rbActiv"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:text="@string/activ"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="275dp"
            tools:layout_editor_absoluteY="573dp" />


    </RadioGroup>

    <TextView
        android:id="@+id/nivelActivitateView"
        android:layout_width="213dp"
        android:layout_height="45dp"
        android:text="@string/nivelul_de_activitate"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548" />

    <Button
        android:id="@+id/calculCaloriesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculeaza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.947" />

    <TextView
        android:id="@+id/txtView5"
        android:layout_width="101dp"
        android:layout_height="27dp"
        android:text="@string/vreau_sa"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735" />

    <RadioGroup
        android:id="@+id/radioGroupWants"
        android:layout_width="281dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834">

        <RadioButton
            android:id="@+id/rbSlabesc"
            android:layout_width="92dp"
            android:layout_height="48dp"
            android:text="@string/slabesc" />

        <RadioButton
            android:id="@+id/rbMentin"
            android:layout_width="85dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10sp"
            android:text="@string/mentin" />

        <RadioButton
            android:id="@+id/rbIngras"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:text="@string/ingras"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="275dp"
            tools:layout_editor_absoluteY="573dp" />


    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>