<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginBtn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerUserActivity"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/registerTxtView"
        android:layout_width="250dp"
        android:layout_height="61dp"
        android:text="@string/register"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <TextView
        android:id="@+id/usernameTxtView"
        android:layout_width="105dp"
        android:layout_height="27dp"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503" />

    <EditText
        android:id="@+id/edtTxtUsername232"
        android:layout_width="219dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtTxtConfirmPassword12312321"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="111dp"
        android:layout_height="38dp"
        android:text="@string/password"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445" />

    <EditText
        android:id="@+id/edtTxtPassword12312"
        android:layout_width="221dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/edtTxtConfirmPassword12312321"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtUsername232"
        app:layout_constraintVertical_bias="0.46" />

    <EditText
        android:id="@+id/edtTxtConfirmPassword12312321"
        android:layout_width="220dp"
        android:layout_height="59dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.706" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:text="Confirm Password"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.331"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.245" />

    <Button
        android:id="@+id/da1w312"
        android:layout_width="157dp"
        android:layout_height="51dp"
        android:text="Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802" />

    <Button
        android:id="@+id/loginBtn1"
        android:layout_width="157dp"
        android:layout_height="51dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="171dp"
        android:layout_height="22dp"
        android:layout_marginTop="51dp"
        android:text="Already have an account? "
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/da1w312"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>